$Id: NEWS,v 1.94 2006/03/14 12:05:16 rocky Exp $

version 0.77cvs
=====================================
????-??-??

- Add an object-oriented C++ wrapper. (libcdio++ and libiso9660++)

- replace libpopt with getopt in cd-drive, cd-info, iso-info, iso-read
  (Peter J. Creath)

- Document cd-paranoia (Peter J. Creath)

- Add cdio_eject_media_drive().

- Add more generic read_sectors() 

- Document that NULL also uses default drive in close_tray, cdio_open
  and cdio_open_am. Document b_mode2 paramenter not used in cdio ISO
  read.

- Some provision for handling Rock-Ridge device numbers.

- block read routines return success if asked to read 0 blocks.

- Start UDF handling

- increase use of enumerations more and decrease use of #defines

- OS Support: 
    DragonFly recognized as FreeBSD, 
    MinGW better tolerated,
    GNU/Linux (and others?) LARGEFILE support

- Doxygen formatting improvements.

- Misc bugs: fixed bincue driver caused core dump on set_speed and 
  set_blocksize; also called NRG routine to get a list of
  cd-images. read.h didn't make sure off_t was defined. fixed bug in
  is_device() when driver_id = DRIVER_UNKNOWN or DRIVER_DEVICE.
  OSX was freeing too much in listing drives. get_hwinfo was not respecting
  fixed-length field boundaries in image drivers (strcpy->strncpy).

- small cdda-player improvements - shows more Cd-Text, and fix bug in
  non-interactive use (Yes, I sometimes use it.)

- NRG checking parses file. string tests were invalid on short < 4
  character filenames.

- Revise and improve example programs

version 0.76
=====================================
2005-09-23

- Better compatibility with C++

- a better eject routine for FreeBSD

- Fix bug in not specifying a device name in libcio_cdda

- Add S_ISSOCK() or S_ISLNK() macros for Rock-Ridge when environment
  doesn't have it, e.g. MSYS 1.0.10 with MinGW 3.4.2.

- Allow building cd-paranoia if Perl is not installed.
